syntax = "proto3";

package bot.exchange.kraken.account;

// VALUE TYPES

// EVENTS
message KrakenAccountAssociated {
  string exchangeId = 1;
  string accountId = 2;
}

message KrakenAccountDissociated {
  string exchangeId = 1;
  string accountId = 2;
}

message KrakenAPIKeysUpdated {
  string exchangeId = 1;
  string accountId = 2;
}

// STATE
message KrakenAccountState {

  string accountId = 1;
  string apiKey = 2;
  string apiSecret = 3;

}